# yt-scraper

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
yt_scraper/: __init__.py  minitube.py  scrape_yt_comments.py  scrape_yt_data.py  scrape_yt_metadata.py
